Fixes a z-index issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -240,7 +240,7 @@
 		background: var(--color-header-bg);
 		position: sticky;
 		inset-block-start: 0;
-		z-index: 1;
+		z-index: 9999;
 	}
 
 	main:not(:has(.Home)) {
